--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -32,8 +32,8 @@
       <div class="layui-form-item" id="content">
         <label class="layui-form-label">内容</label>
         <div class="layui-input-block">
-          <textarea name="sContent" placeholder="请输入内容"
-            class="layui-textarea"></textarea></div>
+          <textarea name="sContent" placeholder="请输入内容" class="layui-textarea"></textarea>
+        </div>
       </div>
 
       <div class="layui-form-item">
@@ -95,7 +95,6 @@
   <script src="/lib/layui/layui.js"></script>
   <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
   <script>
-
     layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
       let okUtils = layui.okUtils;
@@ -105,10 +104,12 @@
       let $ = layui.jquery;
 
       laydate.render({
-        elem: "#iBeginTime", type: "datetime"
+        elem: "#iBeginTime",
+        type: "datetime"
       });
       laydate.render({
-        elem: "#iEndTime", type: "datetime"
+        elem: "#iEndTime",
+        type: "datetime"
       });
 
       let zoneSelect = xmSelect.render({
