--- a/front/pages/gm/cdk-add.html
+++ b/front/pages/gm/cdk-add.html
@@ -12,14 +12,14 @@
   <div class="ok-body">
     <form class="layui-form layui-form-pane ok-form">
       <div class="layui-form-item">
-        <label class="layui-form-label">名称</label>
+        <label class="layui-form-label">名称 *</label>
         <div class="layui-input-block">
           <input type="text" required name="sCDKeyName" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">总数量</label>
+        <label class="layui-form-label">总数量 *</label>
         <div class="layui-input-block">
           <input type="text" required name="iCDKeyNum" class="layui-input">
         </div>
@@ -71,7 +71,7 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">开始时间</label>
+        <label class="layui-form-label">开始时间 *</label>
         <div class="layui-input-block">
           <input type="text" required name="iBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
@@ -79,7 +79,7 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">结束时间</label>
+        <label class="layui-form-label">结束时间 *</label>
         <div class="layui-input-block">
           <input type="text" required name="iEndTime" id="iEndTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
