--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -115,14 +115,14 @@
       });
 
       function add() {
-        okLayer.open("添加cdk", "cdk-add.html", "90%", "90%", null, function () {
+        okLayer.open("添加cdk", "/gm/cdk-add.html", "90%", "90%", null, function () {
           cdkTable.reload();
         })
       }
 
       function edit(id) {
-        okLayer.open("编辑cdk", "cdk-edit.html", "90%", "90%", null, function () {
-          dirTable.reload();
+        okLayer.open("编辑cdk", "/gm/cdk-edit.html", "90%", "90%", null, function () {
+          cdkTable.reload();
         })
       }
     })
