--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -16,7 +16,7 @@
   <!--js逻辑-->
   <script src="../../lib/layui/layui.js"></script>
   <script>
-    let editCDK;
+    var editCDK;
     layui.use(["element", "table", "okLayer", "okUtils"], function () {
       let table = layui.table;
       let okLayer = layui.okLayer;
