--- a/front/pages/gm/cdk-add.html
+++ b/front/pages/gm/cdk-add.html
@@ -103,7 +103,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">每账号限制</label>
         <div class="layui-input-block">
-          <input type="text" value="0" name="iExchangeLimit" class="layui-input">
+          <input type="text" name="iExchangeLimit" class="layui-input">
         </div>
       </div>
 
@@ -143,6 +143,8 @@
 
       //监听提交
       form.on('submit(add)', function (data) {
+        data.field.iBeginTime = Date.parse(data.field.iBeginTime)/1000;
+        data.field.iEndTime = Date.parse(data.field.iEndTime)/1000;
         okUtils.ajax("/api/gm/cdk/add", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
