--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -28,7 +28,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <input type="text" required name="iBeginTime" id="iBeginTime" autocomplete="on" class="layui-input"
+          <input type="text" required name="iBeginTime" id="iBeginTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
@@ -36,7 +36,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <input type="text" required name="iEndTime" id="iEndTime" autocomplete="on" class="layui-input"
+          <input type="text" required name="iEndTime" id="iEndTime" autocomplete="off" class="layui-input"
             lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
@@ -98,15 +98,18 @@
 
       $("input[name='sCDKeyName']").val(parent.editCDK.sCDKeyName);
       $("input[name='iCDKeyNum']").val(parent.editCDK.iCDKeyNum);
-      $("input[name='iBeginTime']").val(parent.editCDK.iBeginTime);
-      $("input[name='iEndTime']").val(parent.editCDK.iEndTime);
-      $("input[name='sCustomLimit']").val(parent.editCDK.sCustomLimit);
+      $("input[name='iBeginTime']").val(new Date(parent.editCDK.iBeginTime*1000), 'yyyy-MM-dd hh:mm:ss');
+      $("input[name='iEndTime']").val(new Date(parent.editCDK.iEndTime*1000), 'yyyy-MM-dd hh:mm:ss');
+      $("textarea[name='sCustomLimit']").val(parent.editCDK.sCustomLimit);
       $("input[name='sZoneLimit']").val(parent.editCDK.sZoneLimit);
       $("input[name='iExchangeLimit']").val(parent.editCDK.iExchangeLimit);
-      $("input[name='sRewardInfo']").val(parent.editCDK.sRewardInfo);
+      $("textarea[name='sRewardInfo']").val(parent.editCDK.sRewardInfo);
 
       //监听提交
       form.on('submit(add)', function (data) {
+        data.field.iBeginTime = Date.parse(data.field.iBeginTime)/1000;
+        data.field.iEndTime = Date.parse(data.field.iEndTime)/1000;
+        data.field.ICDKeyId = parent.editCDK.id;
         okUtils.ajax("/api/gm/cdk/update", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
