--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -49,7 +49,7 @@
       let $ = layui.jquery;
 
       $.get("/api/gm/whitelist/list", function (data) {
-        $("div=['list']").val(data);
+        $("div[name='list']").text(data.data);
       });
 
       //监听提交
@@ -77,7 +77,7 @@
       });
 
       //监听提交
-      form.on('submit(cover)', function (data) {
+      form.on('submit(replace)', function (data) {
         okUtils.ajax("/api/gm/whitelist/replace", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
