--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -15,7 +15,9 @@
       <div class="layui-form-item">
         <div class="layui-input-block">
           <label>当前白名单列表</label>
-          <div name="list"></div>
+          <br>
+          <br>
+          <div name="list" class="layui-bg-cyan"></div>
         </div>
       </div>
 
