--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -27,7 +27,7 @@
 
       <div class="layui-form-item">
         <div class="layui-input-block">
-          <input type="text" name="input" required lay-verify="required" class="layui-input"></textarea>
+          <textarea name="input" required lay-verify="required" class="layui-textarea"></textarea>
         </div>
       </div>
 
