--- a/front/pages/gm/dirty.html
+++ b/front/pages/gm/dirty.html
@@ -11,17 +11,17 @@
 <body>
   <div class="ok-body">
     <form class="layui-form" action="">
-      <div class="layui-form-item">
+      <div class="layui-form-item lyui-form-text">
+        <label class="layui-form-label">输入</label>
         <div class="layui-input-block">
-          <label class="layui-form-label">输入</label>
-          <textarea name="input" id="input" class="layui-textarea" rows="7"></textarea>
+          <textarea name="input" style="width:50%" id="input" class="layui-textarea" rows="7"></textarea>
         </div>
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">输出</label>
         <div class="layui-input-block">
-          <label class="layui-form-label">输出</label>
-          <textarea name="output" id="output" disabled class="layui-textarea" rows="7"></textarea>
+          <textarea name="output" style="width:50%" id="output" disabled class="layui-textarea" rows="7"></textarea>
         </div>
       </div>
 
