--- a/front/pages/gm/forbid.html
+++ b/front/pages/gm/forbid.html
@@ -11,21 +11,23 @@
 <body>
   <div class="ok-body">
     <form class="layui-form" action="">
+      <br>
+      <br>
       <div class="layui-form-item">
+        <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
-          <label class="layui-form-label">开始时间</label>
-          <input type="text" name="StartTime" id="iBeginTime" class="layui-input">
+          <input type="text" style="width:40%" name="StartTime" id="iBeginTime" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">结束时间</label>
         <div class="layui-input-block">
-          <label class="layui-form-label">结束时间</label>
-          <input type="text" name="EndTime" id="iEndTime" class="layui-input">
+          <input type="text" style="width:40%" name="EndTime" id="iEndTime" class="layui-input">
         </div>
       </div>
 
-      <div class="layui-input-inline">
+      <div class="layui-input-block">
         <button name="setting" class="layui-btn" lay-submit lay-filter="setting">设置</button>
       </div>
   </div>
