--- a/front/pages/gm/whitelist.html
+++ b/front/pages/gm/whitelist.html
@@ -11,22 +11,19 @@
 <body>
   <div class="ok-body">
     <form class="layui-form" action="">
-
       <div class="layui-form-item">
-        <div class="layui-input-block">
+        <div class="layui-input-block" style="color:#a29bfe">
+          <br>
           <label>当前白名单列表</label>
           <br>
           <br>
-          <div name="list" class="layui-bg-cyan"></div>
+          <div name="list" style="width:50%; word-wrap:break-word"></div>
         </div>
       </div>
+      <br>
 
       <div class="layui-form-item">
-        <hr class="layui-bg-orange">
-      </div>
-
-      <div class="layui-form-item">
-        <div class="layui-input-block">
+        <div class="layui-input-block" style="width:40%">
           <textarea name="input" required lay-verify="required" class="layui-textarea"></textarea>
         </div>
       </div>
