--- a/front/pages/gm/notice-add.html
+++ b/front/pages/gm/notice-add.html
@@ -129,6 +129,9 @@
               showIcon: false,
             }
           }
+        },
+        toolbar: {
+            show: true,
         }
       });
 
