--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -36,6 +36,7 @@
 		let okUtils = layui.okUtils;
     let form = layui.form;
     let xmSelect = layui.xmSelect;
+    let $ = layui.jquery;
 		okLoading.close();
 
     let zoneSelect = xmSelect.render({
@@ -64,6 +65,7 @@
     okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
       zoneSelect.update({
         data: response.data,
+        initValue: [1],
       });
     }).fail(function (error) {
       console.log(error);
@@ -72,26 +74,41 @@
 		let roleTable = table.render({
 			elem: "#tableId",
       url: "/api/game/role/list",
+      where: {zoneid: 1},
       text: {
         none: '暂无相关数据',
       },
 			limit: 30,
 			page: true,
 			cols: [[
-				{field: "zoneid", title: "服务器", width: 90},
-				{field: "id", title: "角色ID", width: 90},
+				{field: "id", title: "角色ID"},
 				{field: "name", title: "角色名称"},
-				{field: "vip", title: "vip等级"},
+				{field: "vip_level", title: "vip等级", sort: true},
 				{field: "last_login_time", title: "最后登录时间"},
 				{field: "reg_time", title: "注册时间"},
-				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
-			]]
+				{title: "操作", width: 200, align: "center", templet: "#operationTpl", fixed: 'right'}
+			]],
+      toolbar: true,
+      defaultToolbar: ['filter', 'print', 'exports'],
+      autoSort: false,
+    });
+
+    table.on('sort(tableFilter)', function(obj){
+      roleTable.reload({
+        initSort: obj,
+        where: {
+          field: obj.field,
+          order: obj.type,
+        },
+      });
     });
 
     form.on("submit(search)", function (data) {
       roleTable.reload({
         where: data.field,
-        page: {curr: 1}
+        page: {
+          curr: 1,
+        }
       });
       return false;
     });
