--- a/front/pages/console.html
+++ b/front/pages/console.html
@@ -23,7 +23,8 @@
               <img src="images/home-01.png" alt="none" />
             </div>
             <div class="cart-r">
-              <div class="stat-text incomes-num">0</div>
+              <div id="today-income" class="stat-text layui-inline">0</div>/
+              <div id="total-income" class="stat-text layui-inline">0</div>
               <div class="stat-heading">今日收入/总收入</div>
             </div>
           </div>
@@ -37,8 +38,8 @@
               <img src="images/home-04.png" alt="none" />
             </div>
             <div class="cart-r">
-              <div class="stat-text fans-num">0</div>
-              <div class="stat-heading">实时在线/今日活跃</div>
+              <div id="today-active" class="stat-text">1000</div>
+              <div class="stat-heading">今日活跃</div>
             </div>
           </div>
         </div>
@@ -51,7 +52,8 @@
               <img src="images/home-04.png" alt="none" />
             </div>
             <div class="cart-r">
-              <div class="stat-text fans-num">0</div>
+              <div id="today-newadd" class="stat-text layui-inline">0</div>/
+              <div id="total-newadd" class="stat-text layui-inline">0</div>
               <div class="stat-heading">今日新增/总创角</div>
             </div>
           </div>
@@ -65,7 +67,8 @@
               <img src="images/home-04.png" alt="none" />
             </div>
             <div class="cart-r">
-              <div class="stat-text fans-num">0</div>
+              <div id="today-account" class="stat-text layui-inline">0</div>/
+              <div id="total-account" class="stat-text layui-inline">0</div>
               <div class="stat-heading">今日注册/总注册</div>
             </div>
           </div>
