--- a/front/pages/game/weapon-add.html
+++ b/front/pages/game/weapon-add.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>列传通关记录</title>
+	<title>军备获得</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="/css/oksub.css">
 	<script type="text/javascript" src="/lib/loading/okLoading.js"></script>
@@ -84,7 +84,7 @@
       console.log(error);
     });
 
-		let eliteTable = table.render({
+		let weaponTable = table.render({
 			elem: "#tableId",
       data:[],
       text: {
@@ -93,24 +93,12 @@
 			limit: 30,
 			page: true,
 			cols: [[
-        {field: "id", title: "日志id"},
+				{field: "id", title: "日志id"},
 				{field: "time", title: "时间"},
-        {field: "stageid", title: "关卡id"},
-        {field: "win", title: "胜负结果", templet: function(d) {
-            return d.win == 1 ? '胜' : '负';
-        }},
-        {field: "first", title: "是否首次", templet: function(d) {
-            return d.first == 1 ? '是' : '否';
-        }},
-        {field: "star", title: "星级"},
-        {field: "cost_time", title: "消耗时间"},
-        {field: "revive_times", title: "战斗复活次数"},
-        {field: "give_up", title: "是否强制结束", templet: function(d) {
-            return d.give_up == 1 ? '是' : '否';
-        }},
-        {field: "consume_cards", title: "消耗卡牌数"},
-        {field: "left_cards", title: "剩余卡牌数"},
-        {field: "restore_times", title: "战斗恢复次数"},
+				{field: "weaponid", title: "英雄id"},
+				{field: "level", title: "等级"},
+				{field: "star", title: "星级"},
+				{field: "action", title: "来源"},
 			]],
       toolbar: true,
       defaultToolbar: ['filter', 'print', 'exports'],
@@ -118,8 +106,8 @@
     });
 
     form.on("submit(search)", function (data) {
-      eliteTable.reload({
-        url: "/api/game/elite/addlog",
+      weaponTable.reload({
+        url: "/api/game/weapon/addlog",
         where: data.field,
         page: {
           curr: 1,
