horse treasure weapon

--- a/front/pages/game/horse-add.html
+++ b/front/pages/game/horse-add.html
@@ -95,9 +95,8 @@
 			cols: [[
 				{field: "id", title: "日志id"},
 				{field: "time", title: "时间"},
-				{field: "horseid", title: "英雄id"},
-				{field: "level", title: "等级"},
-				{field: "star", title: "星级"},
+				{field: "horseId", title: "马匹id"},
+				{field: "vSkill", title: "技能id"},
 				{field: "action", title: "来源"},
 			]],
       toolbar: true,
