--- a/front/pages/game/weapon-add.html
+++ b/front/pages/game/weapon-add.html
@@ -95,9 +95,7 @@
 			cols: [[
 				{field: "id", title: "日志id"},
 				{field: "time", title: "时间"},
-				{field: "weaponid", title: "英雄id"},
-				{field: "level", title: "等级"},
-				{field: "star", title: "星级"},
+				{field: "weaponId", title: "武器id"},
 				{field: "action", title: "来源"},
 			]],
       toolbar: true,
