--- a/front/pages/console.html
+++ b/front/pages/console.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>经分后台</title>
@@ -11,8 +10,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/oksub.css" media="all" />
+	<script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
-
 <body class="ok-body-scroll console">
   <div class="ok-body home">
     <div class="layui-row layui-col-space15">
@@ -77,10 +76,77 @@
     </div>
 
     <div class="layui-row layui-col-space15">
+      <form class="layui-form">
+        <div class="layui-form-item">
+          <div class="layui-inline">
+	    		  <div class="layui-input-inline">
+              <div id="zoneSelect"></div>
+            </div>
+	    		  <div class="layui-input-inline">
+              <input class="layui-input" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
+            </div>
+	    		  <div class="layui-input-inline">
+              <input class="layui-input" placeholder="截止日期" autocomplete="off" id="endTime" name="endTime">
+            </div>
+	    		  <div class="layui-input-inline">
+              <button class="layui-btn" lay-submit lay-filter="search">
+                <i class="layui-icon layui-icon-search"></i>
+              </button>
+            </div>
+          </div>
+      </form>
+	    <table id="tableId" lay-filter="tableFilter"></table>
     </div>
   </div>
 </body>
-
 </html>
 <script type="text/javascript" src="lib/layui/layui.js"></script>
 <script type="text/javascript" src="js/console.js"></script>
+<script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
+<script>
+	layui.use(["table", "okUtils", "form", "okLayer", "laydate"], function () {
+		let table = layui.table;
+		let okUtils = layui.okUtils;
+    let form = layui.form;
+    let okLayer = layui.okLayer;
+    let xmSelect = layui.xmSelect;
+    let $ = layui.jquery;
+    let laydate = layui.laydate;
+		okLoading.close();
+
+    laydate.render({elem: "#startTime", type: "datetime"});
+    laydate.render({elem: "#endTime", type: "datetime"});
+
+    let zoneSelect = xmSelect.render({
+      el: '#zoneSelect',
+      name: 'zoneid',
+      prop: {
+        value: 'iZoneId',
+        name: 'sZoneName',
+      },
+      tips: '请选择一个服务器',
+      layVerify: 'required',
+      layVerType: 'tips',
+      radio: true,
+      clickClose: true,
+      model: {
+        label: {
+          type: 'block',
+          block: {
+            //是否显示删除图标
+            showIcon: false,
+          }
+        }
+      }
+    });
+
+    okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
+      zoneSelect.update({
+        data: response.data,
+        initValue: [1],
+      });
+    }).fail(function (error) {
+      console.log(error);
+    });
+	});
+</script>
