--- a/front/pages/console.html
+++ b/front/pages/console.html
@@ -125,10 +125,7 @@
         name: 'sZoneName',
       },
       tips: '请选择一个服务器',
-      layVerify: 'required',
-      layVerType: 'tips',
-      radio: true,
-      clickClose: true,
+      autoRow: true,
       model: {
         label: {
           type: 'block',
@@ -137,16 +134,60 @@
             showIcon: false,
           }
         }
-      }
+      },
+      toolbar: {
+        show: true,
+      },
     });
 
     okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
       zoneSelect.update({
         data: response.data,
-        initValue: [1],
       });
     }).fail(function (error) {
       console.log(error);
+    });
+
+		let allTable = table.render({
+			elem: "#tableId",
+      url: "/api/stat/all/list",
+      text: {
+        none: '暂无相关数据',
+      },
+			limit: 30,
+			page: true,
+			cols: [[
+				{field: "statymd", title: "日期"},
+				{field: "zone_name", title: "服务器名"},
+				{field: "zone_openday", title: "开服天数"},
+				{field: "accountnum", title: "总注册"},
+				{field: "rolenum", title: "总创角"},
+				{field: "rolenum_increase", title: "总创角增幅"},
+				{field: "newadd", title: "日新增"},
+				{field: "active", title: "日活跃"},
+				{field: "login_times", title: "登录次数"},
+				{field: "login_times_per", title: "人均登录次数"},
+				{field: "recharge_num", title: "日充值人数"},
+				{field: "recharge_money", title: "日充值金额"},
+				{field: "recharge_per", title: "日充值渗透率"},
+				{field: "week_active", title: "周活跃用户数"},
+				{field: "double_week_active", title: "双周活跃用户数"},
+				{field: "month_active", title: "月活跃用户数"},
+				{field: "active_per", title: "用户活跃度"},
+			]],
+      toolbar: true,
+      defaultToolbar: ['filter', 'print', 'exports'],
+      autoSort: false,
+    });
+
+    form.on("submit(search)", function (data) {
+      allTable.reload({
+        where: data.field,
+        page: {
+          curr: 1,
+        }
+      });
+      return false;
     });
 	});
 </script>
