--- a/front/pages/stat/newadd.html
+++ b/front/pages/stat/newadd.html
@@ -30,13 +30,17 @@
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
 <script>
-	layui.use(["table", "okUtils", "form", "okLayer"], function () {
+	layui.use(["table", "okUtils", "form", "okLayer", "laydate"], function () {
 		let table = layui.table;
 		let okUtils = layui.okUtils;
     let form = layui.form;
     let okLayer = layui.okLayer;
     let $ = layui.jquery;
+    let laydate = layui.laydate;
 		okLoading.close();
+
+    laydate.render({elem: "#startTime", type: "datetime"});
+    laydate.render({elem: "#endTime", type: "datetime"});
 
 		let newaddTable = table.render({
 			elem: "#tableId",
