--- a/front/pages/game/stage-pass.html
+++ b/front/pages/game/stage-pass.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>关卡记录</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="/css/oksub.css">
-	<script type="text/javascript" src="/lib/loading/okLoading.js"></script>
+  <meta charset="UTF-8">
+  <title>关卡记录</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="/css/oksub.css">
+  <script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
 <body>
 <div class="ok-body">
   <form class="layui-form">
     <div class="layui-form-item">
       <div class="layui-inline">
-			  <div class="layui-input-inline">
+        <div class="layui-input-inline">
           <div id="zoneSelect"></div>
+        </div>
+        <div class="layui-input-inline">
+          <button class="layui-btn" lay-submit lay-filter="search">
+            <i class="layui-icon layui-icon-refresh-3"></i>
+          </button>
         </div>
       </div>
   </form>
-	<table id="tableId" lay-filter="tableFilter"></table>
+  <table id="tableId" lay-filter="tableFilter"></table>
 </div>
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
 <script>
   var zoneid;
-	layui.use(["table", "okUtils", "form", "okLayer"], function () {
-		let table = layui.table;
-		let okUtils = layui.okUtils;
+  layui.use(["table", "okUtils", "form", "okLayer"], function () {
+    let table = layui.table;
+    let okUtils = layui.okUtils;
     let form = layui.form;
     let okLayer = layui.okLayer;
     let xmSelect = layui.xmSelect;
     let $ = layui.jquery;
-		okLoading.close();
+    okLoading.close();
 
     let zoneSelect = xmSelect.render({
       el: '#zoneSelect',
@@ -53,17 +58,6 @@
             showIcon: false,
           }
         }
-      },
-      on: function(data) {
-              if (data.isAdd) {
-            stageTable.reload({
-              url: "/api/game/stage/pass",
-              where: data.field,
-              page: {
-                curr: 1,
-              }
-            });
-              }
       }
     });
 
@@ -76,26 +70,26 @@
       console.log(error);
     });
 
-		let stageTable = table.render({
-			elem: "#tableId",
+    let stageTable = table.render({
+      elem: "#tableId",
       data:[],
       text: {
         none: '暂无相关数据',
       },
-			limit: 30,
-			page: true,
-			cols: [[
-				{field: "stageid", title: "关卡id"},
-				{field: "stage_first_start_num", title: "首次闯关人数"},
-				{field: "stage_first_pass_num", title: "首次通关人数"},
-				{field: "stage_first_pass_star1_num", title: "首次通关1星人数"},
-				{field: "stage_first_pass_star2_num", title: "首次通关2星人数"},
-				{field: "stage_first_pass_star3_num", title: "首次通关3星人数"},
-				{field: "stage_total_pass_num", title: "总通关人数"},
+      limit: 30,
+      page: true,
+      cols: [[
+        {field: "stageid", title: "关卡id"},
+        {field: "stage_first_start_num", title: "首次闯关人数"},
+        {field: "stage_first_pass_num", title: "首次通关人数"},
+        {field: "stage_first_pass_star1_num", title: "首次通关1星人数"},
+        {field: "stage_first_pass_star2_num", title: "首次通关2星人数"},
+        {field: "stage_first_pass_star3_num", title: "首次通关3星人数"},
+        {field: "stage_total_pass_num", title: "总通关人数"},
         {field: "stage_loss_rate", title: "本关失败率(首次闯关人数-总通关人数)/首次闯关人数"},
         {field: "role_num", title:"创角数"},
-				{field: "stage_total_loss_rate", title: "总流失(创角数-总通关人数)/创角数"},
-			]],
+        {field: "stage_total_loss_rate", title: "总流失(创角数-总通关人数)/创角数"},
+      ]],
       autoSort: false,
     });
 
@@ -109,7 +103,7 @@
       });
       return false;
     });
-	})
+  })
 </script>
 </body>
 </html>
