--- a/front/pages/game/stage-pass.html
+++ b/front/pages/game/stage-pass.html
@@ -72,11 +72,13 @@
 
     let stageTable = table.render({
       elem: "#tableId",
+      url: "/api/game/stage/pass",
+      where: {zoneid:zoneSelect.getValue('value')},
       data:[],
       text: {
         none: '暂无相关数据',
       },
-      limit: 30,
+      limit: 10,
       page: true,
       cols: [[
         {field: "stageid", title: "关卡id"},
@@ -86,9 +88,13 @@
         {field: "stage_first_pass_star2_num", title: "首次通关2星人数"},
         {field: "stage_first_pass_star3_num", title: "首次通关3星人数"},
         {field: "stage_total_pass_num", title: "总通关人数"},
-        {field: "stage_loss_rate", title: "本关失败率(首次闯关人数-总通关人数)/首次闯关人数"},
+        {field: "stage_loss_rate", title: "本关失败率(首次闯关人数-总通关人数)/首次闯关人数", templet: function(d) {
+            return (d.stage_loss_rate * 100).toString().substring(0,4) + "%"
+        }},
         {field: "role_num", title:"创角数"},
-        {field: "stage_total_loss_rate", title: "总流失(创角数-总通关人数)/创角数"},
+        {field: "stage_total_loss_rate", title: "总流失(创角数-总通关人数)/创角数", templet: function(d) {
+            return (d.stage_total_loss_rate * 100).toString().substring(0,4) + "%"
+        }},
       ]],
       autoSort: false,
     });
