--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -28,16 +28,12 @@
       <div class="layui-form-item">
         <button class="layui-btn layui-block" lay-filter="login" lay-submit="">登录</button>
       </div>
-      <div class="login-link">
-        <a href="register.html">注册</a>
-        <a href="forget.html">忘记密码?</a>
-      </div>
     </form>
   </div>
   <!--js逻辑-->
   <script src="lib/layui/layui.js"></script>
   <script>
-    layui.use(["form", "okUtils", "okLayer", "okCookie"], function () {
+    layui.use(["form", "okUtils", "okLayer"], function () {
       let form = layui.form;
       let $ = layui.jquery;
       let okUtils = layui.okUtils;
@@ -48,15 +44,12 @@
        */
       form.on("submit(login)", function (data) {
         okUtils.ajax("/api/login", "post", data.field, true).done(function (response) {
-          // 保存token到cookie中供以后使用
-          $.cookie("textoken", response.data.token, { expires: response.data.day })
-          localStorage.setItem("username", response.data.username);
           okLayer.greenTickMsg("登陆成功", function () {
-            window.location = "/index.html";
-          })
+            window.location.href = "/index.html?r="+Math.random().toString(36);
+          });
         }).fail(function (data) {
           if (data.code == -2) {
-            window.location = "/index.html";
+            window.location.href = "/index.html?r="+Math.random().toString(36);
           }
         });
         return false;
